force-app/main/default/objects/Employee_Address__c/Employee_Address__c.object-meta.xml
<CustomObject>
    <label>Employee Address</label>
    <nameField>
        <label>Employee Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>