force-app/main/default/objects/Employee_Address__c/fields/Employee_Address__c.field-meta.xml
<CustomField>
    <fullName>Employee_Address__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees Addresses</relationshipLabel>
    <relationshipName>Employees_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>