force-app/main/default/objects/Employee_Address__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <label>Pin Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>