force-app/main/default/objects/Employee_Address__c/validationRules/US_Pin_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Pin_Code</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(LEN(Pin_Code__c)=5)</errorConditionFormula>
    <errorDisplayField>Pin_Code__c</errorDisplayField>
    <errorMessage>US Zip Code should have 5 char length</errorMessage>
</ValidationRule>